--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -23,7 +23,7 @@ email: armygreg9@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   The unofficial whitepaper for Multivese of greg project.
 domain: armygreg.github.io
-baseurl: ""
+baseurl: "/whitepaper"
 url: https://armygreg.github.io
 twitter_username: armygreg9
 github_username:  armygreg
