--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -21,7 +21,7 @@
 title: Multiverse of greg unofficial Whitepaper
 email: armygreg9@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  The unofficial whitepaper for Multivese of greg project.
+  The unofficial whitepaper for the Multiverse of greg project.
 domain: armygreg.github.io
 baseurl: "/multiverse"
 url: https://armygreg.github.io
